# emg_experiment_simple

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
emg_experiment_simple/: extracted_features_saver.py  ninapro_experiment.py  ninapro_experiment_2.py  progressparallel.py  simple_experiment.py  simple_ninapro_experiment.py  tools.py  xgb_classifier_label_enc.py
experiments_results/results_simple_experiment/: MK_10_03_2022_EMG.md  MK_10_03_2022_EMG.pickle  comment.txt
